--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
     "string.h": "c",
     "easypio.h": "c",
     "stdlib.h": "c",
-    "time.h": "c"
+    "time.h": "c",
+    "stdio.h": "c"
   }
 }
